# CMP9767-27455742

./: .dockerignore  README.md
src/robot_assignment/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/robot_assignment/robot_assignment/: camera_classifier.py  color_3d_detection.py  demo_inspection.py  detector_3d.py  web_server-old.py  web_server.py
src/robot_assignment/test/: test_color_3d_detection.py
src/robot_assignment/worlds/: custom_world2.world  custom_world3.world  custom_world5.world
