<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_assignment</name>
  <version>0.1.0</version>
  <description>Code for the Robot Programming - CMP9767  assigment at the University of Lincoln, UK.</description>
  <maintainer email="27455742@students.lincoln.ac.uk">Anyeh Ndi-Tah</maintainer>
  <maintainer email="rpolvara@lincoln.ac.uk">Riccardo Polvara</maintainer>
  <maintainer email="gcielniak@lincoln.ac.uk">Grzegor Cielniak</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
